--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
             <div class="container">
 {#                <div>#}
 {#                    <a href="{% url 'main:home' %}">#}
-{#                        <img src="{% static 'deps/images/logo.png' %}"  style="width: 46px;height: 46px" alt="logo">#}
+{#                        <img src="{% static 'deps/coinLogo_/logo.png' %}"  style="width: 46px;height: 46px" alt="logo">#}
 {#                        <a class="navbar-brand" href="{% url 'main:home' %}" >Crypto viewer</a>#}
 {#                    </a>#}
 {#                </div>#}
@@ -97,7 +97,7 @@
 {#                    {{ message }}#}
 {#                </div>#}
 {#            {% endfor %}#}
-{#        {% endif %}#}`
+{#        {% endif %}#}
         {% include  "includes/notifications.html" %}
         {% block content %}
         {% endblock %}
