--- a/templates/includes/notifications.html
+++ b/templates/includes/notifications.html
@@ -1,7 +1,7 @@
 {% load static %}
 
 {% if form.non_field_errors %}
-	<div class="container mt-4">
+	<div class="container mt-4" style="justify-content: center">
         <div class="row justify-content-center">
             <div class="col-md-6">
                 <div class="alert alert-danger alert-dismissible fade show custom-shadow" role="alert">
@@ -14,7 +14,7 @@
 {% endif %} 
 
 <!-- For messages -->
-<div class="container mt-4">
+<div class="container mt-4" style="justify-content: center">
     <div class="row justify-content-center">
         <div class="col-md-6">
             {% if messages %}
